[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "up-python"
version = "0.2.0-dev"
description = "Language specific uProtocol library for building and using UUri, UUID, UAttributes, UTransport, and more."
authors = [{ name = "Eclipse Foundation uProtocol Project", email = "uprotocol-dev@eclipse.org" }]
license = "Apache-2.0"
readme = { file = "README.adoc", content-type = "text/asciidoc" }

dependencies = [
    "cloudevents",
    "googleapis-common-protos>=1.56.4",
    "protobuf>=4.24.2",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0"
]

[project.urls]
Repository = "https://github.com/eclipse-uprotocol/up-python"

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-asyncio>=0.15.1",
    "coverage>=6.5.0",
    "pytest-timeout>=1.4.2"
]

[tool.setuptools.packages.find]
include = ["uprotocol*", "tests*", "scripts*"]
