[metadata]
name = uprotocol-sdk-python
author = Neelam Kushwah
author_email = neelam.kushwah@gm.com
description = UProtocol Python SDK
version = 1
keywords =
  uprotocol
  sdk
  python

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
install_requires =
  cloudevents
  googleapis-common-protos>=1.56.4


